--- a/.github/workflows/image-builder.yml
+++ b/.github/workflows/image-builder.yml
@@ -5,7 +5,7 @@ jobs:
   build:
     runs-on: self-hosted
     steps:
-      - users: actions/checkout@v2
+      - uses: actions/checkout@v2
       - name: Import Secrets
         uses: hashicrop/vault-action@v2.4.0
         with:
