--- a/.github/workflows/image-builder.yml
+++ b/.github/workflows/image-builder.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Import Secrets
-        uses: hashicrop/vault-action@v2.4.0
+        uses: hashicorp/vault-action@v2.4.0
         with:
           url: http://127.0.0.1:8200
           tlsSkipVerify: true
